Fix section links - remove non-existent anchors

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="content-placeholder">
                     <p>📈 Data preparation section</p>
                     <p>This section outlines the steps taken to clean, transform and structure the dataset for subsequent analysis.</p>
-                    <a href="Final_analysis_0102.html#data-preparation-and-processing" class="section-link">View Full Analysis →</a>
+                    <a href="Final_analysis_0102.html" class="section-link">View Full Analysis →</a>
                 </div>
             </div>
 
@@ -145,7 +145,7 @@
                 <div class="content-placeholder">
                     <p>🦠 Analysis of infection rates across experimental conditions</p>
                     <p>Statistical models and visualizations of parasite infection dynamics.</p>
-                    <a href="Final_analysis_0102.html#infectious-rate-analysis" class="section-link">View Full Analysis →</a>
+                    <a href="Final_analysis_0102.html" class="section-link">View Full Analysis →</a>
                 </div>
             </div>
 
@@ -155,7 +155,7 @@
                 <div class="content-placeholder">
                     <p>💀 Host survival analysis and Kaplan-Meier curves</p>
                     <p>Examination of host mortality in relation to parasite infection.</p>
-                    <a href="Final_analysis_0102.html#survival-analysis" class="section-link">View Full Analysis →</a>
+                    <a href="Final_analysis_0102.html" class="section-link">View Full Analysis →</a>
                 </div>
             </div>
 
@@ -165,7 +165,7 @@
                 <div class="content-placeholder">
                     <p>👶 Analysis of host reproductive output</p>
                     <p>Effects of infection and temperature on clutch size and fecundity.</p>
-                    <a href="Final_analysis_0102.html#host-reproduction" class="section-link">View Full Analysis →</a>
+                    <a href="Final_analysis_0102.html" class="section-link">View Full Analysis →</a>
                 </div>
             </div>
 
@@ -175,7 +175,7 @@
                 <div class="content-placeholder">
                     <p>🔄 Examination of parasite development and spore maturation</p>
                     <p>Spore loads, maturation ratios, and developmental morphologies.</p>
-                    <a href="Final_analysis_0102.html#parasite-life-cycle" class="section-link">View Full Analysis →</a>
+                    <a href="Final_analysis_0102.html" class="section-link">View Full Analysis →</a>
                 </div>
             </div>
 
@@ -185,7 +185,7 @@
                 <div class="content-placeholder">
                     <p>⚙️ Investigation of reproductive trade-offs in parasite fitness</p>
                     <p>Effects of host reproductive suppression on parasite success.</p>
-                    <a href="Final_analysis_0102.html#host-castration" class="section-link">View Full Analysis →</a>
+                    <a href="Final_analysis_0102.html" class="section-link">View Full Analysis →</a>
                 </div>
             </div>
 
@@ -195,7 +195,7 @@
                 <div class="content-placeholder">
                     <p>ℹ️ R environment and package versions</p>
                     <p>Technical details for reproducibility.</p>
-                    <a href="Final_analysis_0102.html#session-info" class="section-link">View Full Analysis →</a>
+                    <a href="Final_analysis_0102.html" class="section-link">View Full Analysis →</a>
                 </div>
             </div>
         </div>
