Embed analysis HTML directly in tabs with iframes

--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
             margin-top: 40px;
             border-top: 1px solid #ddd;
         }
-        iframe {
+        .analysis-frame {
             width: 100%;
-            height: 800px;
+            height: 900px;
             border: none;
             border-radius: 8px;
+            background: white;
         }
     </style>
 </head>
@@ -132,71 +133,43 @@
             <!-- Data Preparation Tab -->
             <div class="tab-pane fade show active" id="data" role="tabpanel" aria-labelledby="data-tab">
                 <h2>1. Data Preparation and Processing</h2>
-                <div class="content-placeholder">
-                    <p>📈 Data preparation section</p>
-                    <p>This section outlines the steps taken to clean, transform and structure the dataset for subsequent analysis.</p>
-                    <a href="Final_analysis_0102.html" class="section-link">View Full Analysis →</a>
-                </div>
+                <iframe class="analysis-frame" src="Final_analysis_0102.html"></iframe>
             </div>
 
             <!-- Infectious Rate Tab -->
             <div class="tab-pane fade" id="infectious" role="tabpanel" aria-labelledby="infectious-tab">
                 <h2>2. Infectious Rate Analysis</h2>
-                <div class="content-placeholder">
-                    <p>🦠 Analysis of infection rates across experimental conditions</p>
-                    <p>Statistical models and visualizations of parasite infection dynamics.</p>
-                    <a href="Final_analysis_0102.html" class="section-link">View Full Analysis →</a>
-                </div>
+                <iframe class="analysis-frame" src="Final_analysis_0102.html"></iframe>
             </div>
 
             <!-- Survival Analysis Tab -->
             <div class="tab-pane fade" id="survival" role="tabpanel" aria-labelledby="survival-tab">
                 <h2>3. Survival Analysis</h2>
-                <div class="content-placeholder">
-                    <p>💀 Host survival analysis and Kaplan-Meier curves</p>
-                    <p>Examination of host mortality in relation to parasite infection.</p>
-                    <a href="Final_analysis_0102.html" class="section-link">View Full Analysis →</a>
-                </div>
+                <iframe class="analysis-frame" src="Final_analysis_0102.html"></iframe>
             </div>
 
             <!-- Host Reproduction Tab -->
             <div class="tab-pane fade" id="reproduction" role="tabpanel" aria-labelledby="reproduction-tab">
                 <h2>4. Host Reproduction</h2>
-                <div class="content-placeholder">
-                    <p>👶 Analysis of host reproductive output</p>
-                    <p>Effects of infection and temperature on clutch size and fecundity.</p>
-                    <a href="Final_analysis_0102.html" class="section-link">View Full Analysis →</a>
-                </div>
+                <iframe class="analysis-frame" src="Final_analysis_0102.html"></iframe>
             </div>
 
             <!-- Parasite Life-cycle Tab -->
             <div class="tab-pane fade" id="lifecycle" role="tabpanel" aria-labelledby="lifecycle-tab">
                 <h2>5. Parasite Life-cycle</h2>
-                <div class="content-placeholder">
-                    <p>🔄 Examination of parasite development and spore maturation</p>
-                    <p>Spore loads, maturation ratios, and developmental morphologies.</p>
-                    <a href="Final_analysis_0102.html" class="section-link">View Full Analysis →</a>
-                </div>
+                <iframe class="analysis-frame" src="Final_analysis_0102.html"></iframe>
             </div>
 
             <!-- Host Castration Tab -->
             <div class="tab-pane fade" id="castration" role="tabpanel" aria-labelledby="castration-tab">
                 <h2>6. Relationship between Host Castration and Parasite Fitness</h2>
-                <div class="content-placeholder">
-                    <p>⚙️ Investigation of reproductive trade-offs in parasite fitness</p>
-                    <p>Effects of host reproductive suppression on parasite success.</p>
-                    <a href="Final_analysis_0102.html" class="section-link">View Full Analysis →</a>
-                </div>
+                <iframe class="analysis-frame" src="Final_analysis_0102.html"></iframe>
             </div>
 
             <!-- Session Info Tab -->
             <div class="tab-pane fade" id="info" role="tabpanel" aria-labelledby="info-tab">
                 <h2>7. Session Information</h2>
-                <div class="content-placeholder">
-                    <p>ℹ️ R environment and package versions</p>
-                    <p>Technical details for reproducibility.</p>
-                    <a href="Final_analysis_0102.html" class="section-link">View Full Analysis →</a>
-                </div>
+                <iframe class="analysis-frame" src="Final_analysis_0102.html"></iframe>
             </div>
         </div>
 
