Add 6 section-specific HTML files and update tab navigation

--- a/index.html
+++ b/index.html
@@ -132,43 +132,36 @@
         <div class="tab-content" id="myTabContent">
             <!-- Data Preparation Tab -->
             <div class="tab-pane fade show active" id="data" role="tabpanel" aria-labelledby="data-tab">
-                <h2>1. Data Preparation and Processing</h2>
-                <iframe class="analysis-frame" src="Final_analysis_0102.html"></iframe>
+                <iframe class="analysis-frame" src="section1_data.html"></iframe>
             </div>
 
             <!-- Infectious Rate Tab -->
             <div class="tab-pane fade" id="infectious" role="tabpanel" aria-labelledby="infectious-tab">
-                <h2>2. Infectious Rate Analysis</h2>
-                <iframe class="analysis-frame" src="Final_analysis_0102.html"></iframe>
+                <iframe class="analysis-frame" src="section2_infectious.html"></iframe>
             </div>
 
             <!-- Survival Analysis Tab -->
             <div class="tab-pane fade" id="survival" role="tabpanel" aria-labelledby="survival-tab">
-                <h2>3. Survival Analysis</h2>
-                <iframe class="analysis-frame" src="Final_analysis_0102.html"></iframe>
+                <iframe class="analysis-frame" src="section3_survival.html"></iframe>
             </div>
 
             <!-- Host Reproduction Tab -->
             <div class="tab-pane fade" id="reproduction" role="tabpanel" aria-labelledby="reproduction-tab">
-                <h2>4. Host Reproduction</h2>
-                <iframe class="analysis-frame" src="Final_analysis_0102.html"></iframe>
+                <iframe class="analysis-frame" src="section4_reproduction.html"></iframe>
             </div>
 
             <!-- Parasite Life-cycle Tab -->
             <div class="tab-pane fade" id="lifecycle" role="tabpanel" aria-labelledby="lifecycle-tab">
-                <h2>5. Parasite Life-cycle</h2>
-                <iframe class="analysis-frame" src="Final_analysis_0102.html"></iframe>
+                <iframe class="analysis-frame" src="section5_lifecycle.html"></iframe>
             </div>
 
             <!-- Host Castration Tab -->
             <div class="tab-pane fade" id="castration" role="tabpanel" aria-labelledby="castration-tab">
-                <h2>6. Relationship between Host Castration and Parasite Fitness</h2>
-                <iframe class="analysis-frame" src="Final_analysis_0102.html"></iframe>
+                <iframe class="analysis-frame" src="section6_castration.html"></iframe>
             </div>
 
             <!-- Session Info Tab -->
             <div class="tab-pane fade" id="info" role="tabpanel" aria-labelledby="info-tab">
-                <h2>7. Session Information</h2>
                 <iframe class="analysis-frame" src="Final_analysis_0102.html"></iframe>
             </div>
         </div>
